[gd_scene load_steps=2 format=3 uid="uid://fqqci2xlrn1"]

[ext_resource type="Script" path="res://wack_a_letter/wack_letter.gd" id="1_ku4kd"]

[node name="target_control" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_ku4kd")

[node name="target0" type="Label" parent="CanvasLayer"]
offset_left = 72.0
offset_top = 51.0
offset_right = 218.0
offset_bottom = 77.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="target1" type="Label" parent="CanvasLayer"]
offset_left = 167.0
offset_top = 50.0
offset_right = 313.0
offset_bottom = 76.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="CanvasLayer"]
offset_left = 276.0
offset_top = 50.0
offset_right = 422.0
offset_bottom = 76.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="CanvasLayer"]
offset_left = 81.0
offset_top = 128.0
offset_right = 227.0
offset_bottom = 154.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label5" type="Label" parent="CanvasLayer"]
offset_left = 184.0
offset_top = 128.0
offset_right = 330.0
offset_bottom = 154.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label6" type="Label" parent="CanvasLayer"]
offset_left = 290.0
offset_top = 129.0
offset_right = 436.0
offset_bottom = 155.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label7" type="Label" parent="CanvasLayer"]
offset_left = 120.0
offset_top = 204.0
offset_right = 266.0
offset_bottom = 230.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label8" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = -0.00154321
anchor_right = 0.000868056
offset_left = 224.0
offset_top = 203.0
offset_right = 370.0
offset_bottom = 229.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label9" type="Label" parent="CanvasLayer"]
offset_left = 326.0
offset_top = 203.0
offset_right = 472.0
offset_bottom = 229.0
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="HitTimer" type="Timer" parent="CanvasLayer"]
wait_time = 1.273

[node name="HoldTimer" type="Timer" parent="CanvasLayer"]

[node name="EndTimer" type="Timer" parent="CanvasLayer"]
wait_time = 2.065

[connection signal="timeout" from="CanvasLayer/HitTimer" to="CanvasLayer" method="_on_hit_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/HoldTimer" to="CanvasLayer" method="_on_hold_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/EndTimer" to="CanvasLayer" method="_on_end_timer_timeout"]
